// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LaunchStatus renders failed 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation1 LaunchStatus-status-43 LaunchStatus-fail-47 MuiPaper-rounded"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root LaunchStatus-statusIcon-44"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM8 17.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5zM9.5 8c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5S9.5 9.38 9.5 8zm6.5 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`LaunchStatus renders in progress 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation1 LaunchStatus-status-127 LaunchStatus-inProgress-132 MuiPaper-rounded"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root LaunchStatus-statusIcon-128"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`LaunchStatus renders successful 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation1 LaunchStatus-status-1 LaunchStatus-success-4 MuiPaper-rounded"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root LaunchStatus-statusIcon-2"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM8 17.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5zM9.5 8c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5S9.5 9.38 9.5 8zm6.5 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`LaunchStatus renders upcoming 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation1 LaunchStatus-status-85 LaunchStatus-upcoming-87 MuiPaper-rounded"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root LaunchStatus-statusIcon-86"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM8 17.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5zM9.5 8c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5S9.5 9.38 9.5 8zm6.5 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
      />
    </svg>
  </div>
</DocumentFragment>
`;
